[gd_scene load_steps=3 format=3 uid="uid://b74vuefo6raar"]

[ext_resource type="Script" uid="uid://dc8e1s47pwrm2" path="res://Systems/scheduler/schedule_entry.gd" id="1_8l751"]
[ext_resource type="Texture2D" uid="uid://boafyt4lltecv" path="res://Assets/UI/Default/button_red_close.png" id="2_tw1d3"]

[node name="ScheduleEntry" type="Control"]
custom_minimum_size = Vector2(0.285, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 322.0
offset_bottom = 43.0
script = ExtResource("1_8l751")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_right = 300.0
offset_bottom = 40.0

[node name="HourSelect" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MinuteSelect" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
max_value = 55.0
step = 5.0
rounded = true
alignment = 1

[node name="StartSelect" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2

[node name="DestinationSelect" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("2_tw1d3")
